--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goofy</title>
+    <title>goofy</title>
+    <link rel="icon" href="https://open.scdn.co/cdn/images/favicon.5cb2bd30.ico">
     <style>
         html, body, iframe { width: 100%; height: 100%; margin: 0; border: 0; }
     </style>
