--- a/auth.html
+++ b/auth.html
@@ -1,9 +1,8 @@
 <script>
   let params = new URLSearchParams(location.search);
-  console.log(params);
   let entries = Object.fromEntries(params);
   params.delete('state');
-  let redirectUrl = `https://script.google.com/macros/d/${entries.state}/usercallback?${params.toString()}`;
-  // window.open(redirectUrl, "_self");
-  console.log(redirectUrl)
+  let redirectUrl = `https://script.google.com/macros/d/${entries.state}/usercallback?code=${entries.code}`;
+  alert(redirectUrl)
+  window.open(redirectUrl, "_self");
 </script>
