--- a/auth.html
+++ b/auth.html
@@ -1,8 +1,14 @@
 <script>
-  let params = new URLSearchParams(location.search);
-  let entries = Object.fromEntries(params);
-  params.delete('state');
-  let redirectUrl = `https://script.google.com/macros/d/${entries.state}/usercallback?code=${entries.code}`;
-  alert(redirectUrl)
-  window.open(redirectUrl, "_self");
+  const KEY = 'projectId'
+  let params = new URLSearchParams(location.search)
+  let entries = Object.fromEntries(params)
+  let redirectUrl
+  if (entries.projectId == undefined) {
+    redirectUrl = `https://script.google.com/macros/d/${localStorage.getItem(KEY)}/usercallback${location.search}`
+    localStorage.removeItem(KEY)
+  } else {
+    redirectUrl = entries.redirect
+    localStorage.addItem(KEY, entries.projectId)
+  }
+  window.open(redirectUrl, "_self")
 </script>
