--- a/auth.html
+++ b/auth.html
@@ -10,5 +10,5 @@
     redirectUrl = entries.redirect
     localStorage.setItem(KEY, entries.projectId)
   }
-  window.open(redirectUrl, "_self")
+  // window.open(redirectUrl, "_self")
 </script>
