--- a/auth.html
+++ b/auth.html
@@ -13,5 +13,6 @@
     delete params['baseurl']
     redirectUrl += params.toString()
   }
-  window.open(redirectUrl, "_self")
+  // window.open(redirectUrl, "_self")
+  console.log(redirectUrl)
 </script>
