--- a/auth.html
+++ b/auth.html
@@ -3,9 +3,9 @@
   let params = new URLSearchParams(location.search)
   let entries = Object.fromEntries(params)
   let redirectUrl
-  if (entries.projectId == undefined) {
-    localStorage.removeItem(KEY)
+  if (entries[KEY] == undefined) {
     redirectUrl = `https://script.google.com/macros/d/${localStorage.getItem(KEY)}/usercallback${location.search}`
+    localStorage.removeItem(KEY)
   } else {
     localStorage.setItem(KEY, entries.projectId)
     params.delete(KEY)
