--- a/auth.html
+++ b/auth.html
@@ -13,5 +13,5 @@
     params.delete('baseurl')
     redirectUrl += '?' + params.toString()
   }
-  // window.open(redirectUrl, "_self")
+  window.open(redirectUrl, "_self")
 </script>
